# Juneberries

./: .env.example  .gitignore  README.md  docker-compose.production.yaml  docker-compose.yaml  pyproject.toml
auth_service/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
auth_service/app/: config.py  main.py
auth_service/app/alembic/versions/: 2025_07_17_1437-982f5236e514_1.py  2025_07_18_1521-a574160513b6_add_role_table.py  2025_07_18_1524-c4881e859291_add_user_table.py  2025_07_18_1526-699d8a9477d7_add_permission_table.py  2025_07_18_1528-8d311faa9b9c_add_roles_permissions_table.py  2025_07_27_2128-55b877305979_add_role_table.py  2025_07_27_2204-daccdfe8b571_add_user_table.py  2025_07_27_2206-9b6401a1eea3_add_permission_table.py  2025_07_27_2209-0f33d22653e3_add_rolespermissions_table.py  2025_07_29_2001-3901d91818c7_add_roles_permissions_table.py  2025_08_04_1228-b8b0b06b1630_add_roles_table.py  2025_08_04_1234-c12d12053b50_add_permissions_table.py  2025_08_04_1235-88026abd334e_add_users_table.py  2025_08_04_1238-78396faac7b5_add_roles_permissions_table.py
auth_service/app/api/: __init__.py
auth_service/app/api/v1/: crud.py  schemas.py  views.py
auth_service/app/core/models/: db_helper.py
auth_service/app/crud/: users.py
auth_service/app/models/: __init__.py  base.py  db_helper.py  permission.py  permissions.py  role.py  role_permission.py  roles.py  roles_permissions.py  user.py  users.py
auth_service/app/models/mixins/: __init__.py  id_int_pk_mixin.py
auth_service/app/routes/: __init__.py  users.py
auth_service/app/schemas/: users.py
catalog_service/: .env.example  .gitignore  README.md  pyproject.toml
catalog_service/app/: config.py  main.py
catalog_service/app/alembic/versions/: 2025_08_04_0727-d37e11eb7ece_add_category_table.py  2025_08_04_0731-9c8d33133cb8_add_product_table.py  (+2 more)
catalog_service/app/models/: __init__.py  base.py  categories.py  category.py  product.py  products.py
catalog_service/app/routes/: __init__.py  categories.py  products.py
celery_worker_service/: README.md  pyproject.toml
(+16 files in other folders)
