[project]
name = "celery-worker-service"
version = "0.1.0"
description = ""
authors = [
    {name = "VanZep",email = "vanzup@mail.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all] (>=0.115.14,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
